# solux

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
compliance/: license_policy.toml
contrib/systemd/: solus-server.service  solus-worker.service  solux-server.service  solux-worker.service
dev/: check_licenses.py  precommit.sh  third_party_inventory.py
docs/: CONTRIBUTOR_IP.md  DEPENDENCIES.md  QUICK_START.md  ROADMAP.md  TUTORIAL.md
docs/examples/: .env.example  README.md  config.toml
docs/examples/modules/: params_loader.py
docs/examples/triggers/: email_triage_cron.yaml  morning_digest_cron.yaml  watch_audio.yaml  watch_audio_mp4.yaml  watch_incoming_pdfs.yaml  watch_pdfs.yaml
docs/examples/workflows/: article_index.yaml  chunk_embed_store.yaml  email_triage.yaml  embed_and_store.yaml  embed_one_chunk.yaml  ingest_and_forward.yaml  ingest_done.yaml  morning_news_digest.yaml  pdf_to_obsidian.yaml  podcast_summary.yaml
docs/examples/workflows/healthcare/: claims_classification.yaml  clinical_doc_summary.yaml  clinical_doc_triage.yaml
docs/legal/: CAA_TEMPLATE.md  CLA_TEMPLATE.md
src/solus/: __init__.py  artifacts.py  audio.py  audit.py  background.py  config.py  doctor.py  html_text.py  models.py  pipeline.py  prompts.py  queueing.py  reload.py  summarize.py  transcribe.py  worker.py
src/solus/cli/: __init__.py  fmt.py  init.py  maintenance.py  mcp_cmd.py  modules.py  parser.py  queue.py  run.py  server.py  triggers.py  worker_cmd.py  workflows.py
src/solus/mcp/: __init__.py  server.py
src/solus/modules/: __init__.py  _helpers.py  discovery.py  spec.py
src/solus/modules/ai/: embeddings.py  llm_classify.py  llm_extract.py  llm_prompt.py  llm_sentiment.py  llm_summarize.py  whisper_transcribe.py
src/solus/modules/input/: email_inbox.py  folder_watch.py  parse_pdf.py  rss_feed.py  s3_watcher.py  source_fetch.py  webpage_fetch.py  youtube_playlist.py
src/solus/modules/meta/: branch.py  subworkflow.py
src/solus/modules/output/: email_send.py  file_write.py  local_db.py  obsidian_vault.py  slack_notify.py  vector_store.py  vinsium_node.py  webhook.py
src/solus/modules/transform/: audio_normalize.py  metadata_extract.py  ocr.py  text_clean.py  text_split.py
src/solus/serve/: __init__.py  api.py  auth.py  handler.py  http_utils.py  rbac.py  templates.py
src/solus/triggers/: __init__.py  _state.py  cron.py  folder_watch.py  loader.py  rss_poll.py  runner.py  spec.py
src/solus/workflows/: __init__.py  engine.py  examples.py  loader.py  models.py  registry.py  validation.py
src/solus/workflows/builtins/: audio_summary.py  steps.py
src/solux/: __init__.py  audit.py  background.py  cleanup.py  config.py  db.py  doctor.py  fmt.py  paths.py  pipeline.py  process.py  reload.py  sources.py  worker.py
src/solux/cli/: __init__.py  init.py  maintenance.py  mcp_cmd.py  parser.py  queue.py  run.py  server.py  triggers.py  worker_cmd.py
src/solux/mcp/: __init__.py  server.py
src/solux/modules/: _helpers.py  discovery.py  spec.py
src/solux/modules/ai/: embeddings.py  llm_classify.py  llm_extract.py  llm_prompt.py  llm_sentiment.py  llm_summarize.py  whisper_transcribe.py
src/solux/modules/input/: email_inbox.py  folder_watch.py  parse_pdf.py  rss_feed.py  s3_watcher.py  source_fetch.py  webpage_fetch.py  youtube_playlist.py
src/solux/modules/meta/: __init__.py  branch.py  subworkflow.py
src/solux/modules/output/: email_send.py  file_write.py  local_db.py  obsidian_vault.py  slack_notify.py  vector_store.py  vinsium_node.py  webhook.py
src/solux/modules/transform/: audio_normalize.py  metadata_extract.py  ocr.py  text_clean.py  text_split.py
src/solux/serve/: __init__.py  api.py  auth.py  handler.py  rate_limit.py  rbac.py  sources.py  templates.py
src/solux/triggers/: _state.py  email_poll.py  loader.py  rss_poll.py
src/solux/workflows/: examples.py  expr.py  loader.py  models.py  registry.py
tests/: test_audit.py  test_basic.py  test_builtin_templates.py  test_cleanup_safety.py  test_cli_smoke.py  test_conditional_steps.py  test_cron_parsing.py  test_demo_data.py  test_deployment_smoke.py  test_doctor.py  test_engine_security.py  test_env_overrides.py  test_examples.py  test_expr_edge_cases.py  test_external_modules.py  test_fmt.py  test_handler_json.py  test_hardening.py  test_healthcare_workflows.py  test_helpers_security.py  test_hot_reload.py  test_init.py  test_licensing_artifacts.py  test_llm_prompt.py  test_maintenance_cli.py  test_mcp.py  test_modules.py  test_modules_cli.py  test_new_modules.py  test_onboarding_e2e.py  test_phase10_triggers.py  test_phase11_reliability.py  test_phase12_webui.py  test_phase13_vinsium.py  test_phase1_coverage.py  test_phase9_modules.py  test_queue_workflow.py  test_rbac.py  test_rss_trigger.py  test_security_mode.py  (+9 more)
(+3 files in other folders)
