[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "solux"
version = "0.5.0"
description = "Local-first AI workflow engine for chaining inputs, transforms, and local LLM steps."
readme = "README.md"
authors = [
  { name = "Steven Foerster", email = "sfoerster@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["workflow", "automation", "local-first", "LLM", "AI", "Ollama", "MCP"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.31.0,<3",
  "PyYAML>=6.0,<7",
  "defusedxml>=0.7,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
  "pytest-cov>=5.0,<7",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "types-requests>=2.31,<3",
]
pdf = [
  "pypdf>=4.0,<6",
]
ocr = [
  "pytesseract>=0.3.10,<1",
  "Pillow>=10.0,<12",
]
s3 = [
  "boto3>=1.34,<2",
]
vector = [
  "chromadb>=0.4,<1",
]
oidc = [
  "PyJWT>=2.8,<3",
  "cryptography>=41.0,<46",
]
encrypt = [
  "pysqlcipher3>=1.2,<2",
]
mcp = [
  "mcp>=1.0,<2",
]

[project.urls]
Repository = "https://github.com/sfoerster/solux"
Changelog = "https://github.com/sfoerster/solux/blob/main/CHANGELOG.md"
Issues = "https://github.com/sfoerster/solux/issues"

[project.scripts]
solux = "solux.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=solux --cov-report=term-missing --cov-report=html --cov-fail-under=70"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "yaml",
  "defusedxml",
  "defusedxml.*",
  "jwt",
  "pytesseract",
  "PIL",
  "PIL.*",
  "pypdf",
  "chromadb",
  "boto3",
  "mcp",
  "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "solux.triggers.loader",
  "solux.modules.transform.ocr",
  "solux.modules.transform.metadata_extract",
  "solux.modules.output.vector_store",
  "solux.modules.input.parse_pdf",
  "solux.modules.input.s3_watcher",
]
disable_error_code = ["import-untyped", "import-not-found"]
